k8s/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.test-cluster.agentydragon.com
      secretName: vault-tls
  rules:
    - host: vault.test-cluster.agentydragon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: instance
                port:
                  number: 8200
